--- a/arch/arm64/boot/dts/rockchip/rk3328-rock64.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3328-rock64.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016 Fuzhou Rockchip Electronics Co., Ltd
+ * Copyright (c) 2017 Fuzhou Rockchip Electronics Co., Ltd
  *
  * This file is dual-licensed: you can use it either under the terms
  * of the GPL or the X11 license, at your option. Note that this dual
@@ -101,6 +101,15 @@
 		regulator-name = "vcc_phy";
 		regulator-always-on;
 		regulator-boot-on;
+	};
+
+	vcc_sys: vcc-sys {
+		compatible = "regulator-fixed";
+		regulator-name = "vcc_sys";
+		regulator-always-on;
+		regulator-boot-on;
+		regulator-min-microvolt = <5000000>;
+		regulator-max-microvolt = <5000000>;
 	};
 
 	vcc_sd: sdmmc-regulator {
@@ -249,7 +258,7 @@
 	bus-width = <8>;
 	cap-mmc-highspeed;
 	non-removable;
-	supports-emmc;	
+	supports-emmc;
 	clocks = <&cru HCLK_EMMC>, <&cru SCLK_EMMC>,
 		<&cru SCLK_EMMC_DRV>, <&cru SCLK_EMMC_SAMPLE>;	
 	clock-names = "biu", "ciu", "ciu-drv", "ciu-sample";
@@ -553,7 +562,6 @@
 	bus-width = <4>;
 	cap-mmc-highspeed;
 	cap-sd-highspeed;
-	cd-gpios = <&gpio1 RK_PA5 GPIO_ACTIVE_LOW>;
 	disable-wp;
 	max-frequency = <150000000>;
 	num-slots = <1>;
@@ -568,11 +576,6 @@
 &spi0 {
 	status = "okay";
 
-	/* SPI DMA does not work currently */
-	/delete-property/ dmas;
-	/delete-property/ #dma-cells;
-	/delete-property/ dma-names;
-
 	flash@0 {
 		compatible = "gigadevice,gd25q128", "jedec,spi-nor";
 		#address-cells = <1>;
@@ -581,7 +584,6 @@
 		m25p,fast-read;
 		/* The max SCLK of the flash 104/80 MHZ  */
 		spi-max-frequency = <50000000>;
-		status = "okay";
 
 		partitions {
 			compatible = "fixed-partitions";
@@ -626,13 +628,8 @@
 	status = "okay";
 };
 
-&tve {
-	status = "okay";
-};
-
 &u2phy {
 	status = "okay";
-	otg-vbus-gpios = <&gpio0 RK_PD3 GPIO_ACTIVE_HIGH>;
 };
 
 &u2phy_host {
